--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -32,3 +32,31 @@ a {
 .top-wrapper p {
   opacity: 0.7;
 }
+
+.btn {
+  padding: 8px 24px 8px 24px;
+  color: white;
+  display: inline-block;
+  opacity: 0.8;
+}
+
+.signup {
+  background-color: #239b76;
+}
+
+.facebook {
+  background-color: #3b5998;
+  margin-right: 10px;
+}
+
+.twitter {
+  background-color: #55acee;
+}
+
+.btn-wrapper {
+  margin: 20px 0 20px;
+}
+
+.btn-wrapper p {
+  margin: 10px 0;
+}
