--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -13,6 +13,19 @@ header {
   background-color: rgba(34, 49, 52, 0.9);
 }
 
+.header-left {
+  float: left;
+}
+
+.header-right {
+  float: right;
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+.header-right:hover {
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
 header .header-left .logo {
   width: 124px;
   margin-top: 20px;
