--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -22,6 +22,14 @@ header {
   background-color: rgba(255, 255, 255, 0.3);
 }
 
+.header-right a {
+  line-height: 65px;
+  padding: 0 25px;
+  color: white;
+  display: block;
+  transition: all 0.5s;
+}
+
 .header-right:hover {
   background-color: rgba(255, 255, 255, 0.5);
 }
