--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -101,3 +101,18 @@ header .header-left .logo {
 .fa {
   margin-right: 5px;
 }
+
+.lesson-wrapper {
+  height: 500px;
+  padding-bottom: 80px;
+  background-color: #f7f7f7;
+}
+
+.lesson-wrapper .container .heading {
+  padding: 60px 0 30px 0;
+  color: #5f5d60;
+}
+
+.lesson-wrapper .container .heading h2 {
+  font-weight: normal;
+}
