--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -106,6 +106,7 @@ header .header-left .logo {
   height: 500px;
   padding-bottom: 80px;
   background-color: #f7f7f7;
+  text-align: center;
 }
 
 .lesson-wrapper .container .heading {
@@ -115,4 +116,28 @@ header .header-left .logo {
 
 .lesson-wrapper .container .heading h2 {
   font-weight: normal;
+}
+
+.lesson {
+  float: left;
+  width: 25%;
+}
+
+.lesson .lesson-icon {
+  position: relative;
+}
+
+.lesson .lesson-icon p {
+  position: absolute;
+  top: 90px;
+  width: 100%;
+  color: white;
+}
+
+.lesson .txt-contents {
+  width: 80%;
+  display: inline-block;
+  margin: 20px;
+  font-size: 12px;
+  color: #b3aeb5;
 }
