--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -11,6 +11,9 @@ header {
   height: 65px;
   width: 100%;
   background-color: rgba(34, 49, 52, 0.9);
+  position: fixed;
+  top: 0;
+  z-index: 10;
 }
 
 .header-left {
@@ -140,4 +143,40 @@ header .header-left .logo {
   margin: 20px;
   font-size: 12px;
   color: #b3aeb5;
+}
+
+.message-wrapper {
+  border-bottom: 1px solid #eee;
+  padding-bottom: 80px;
+  text-align: center;
+}
+
+.message {
+  background-color: #5dca88;
+  padding: 15px 40px;
+  cursor: pointer;
+  box-shadow: 0 7px #1a7940;
+}
+
+.message:active {
+  box-shadow: none;
+  position: relative;
+  top: 7px;
+}
+
+.heading h3 {
+  font-weight: normal;
+}
+
+footer {
+  padding-top: 30px;
+}
+
+footer .container img {
+  width: 125px;
+}
+
+footer .container p {
+  color: #b3aeb5;
+  font-size: 12px;
 }
